--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
  <!DOCTYPE html>
 <html lang="en">
   <head>
+	  <link rel="manifest" href="manifest.json" />
     <title>Home</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=200px" />
