--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
 	  <link rel="manifest" href="manifest.json" />
-    <title>Home</title>
+    <title>Calk</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=200px" />
   </head>
