--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Calk</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=200px" />
+	  <link rel="shortcut icon" href="favicon.ico" />
   </head>
   <body>
   <div class="container">
@@ -110,16 +111,6 @@ body {
 	border-bottom: 2px solid #2b505e;
 	border-left: 2px solid #2b505e;
 	border-radius: 15px;
-}
-
-.digits:hover,
-.mathButtons:hover,
-#clearButton:hover {
-	background-color: #FFBA75;
-	border-top: 2px solid #FFF;
-	border-right: 2px solid #FFF;
-	border-bottom: 2px solid #AE5700;
-	border-left: 2px solid #AE5700;
 }
 
 #clearButton {
