--- a/index.html
+++ b/index.html
@@ -92,35 +92,22 @@ body {
 }
 
 .mathButtons {
-	margin: 2px 2px 6px 2px;
-	color: #FFF;
-	text-shadow: -1px -1px 0px #44006F;
-	background-color: #434343;
-	border-top: 2px solid #C1C1C1;
-	border-right: 2px solid #C1C1C1;
-	border-bottom: 2px solid #181818;
-	border-left: 2px solid #181818;
+	border-radius: 50%;
+        background: #e0e0e0;
+        box-shadow: inset 9px 9px 18px #808080,
+        inset -9px -9px 18px #ffffff;
 }
 
 .digits {
-	color: #181818;
-	text-shadow: 1px 1px 0px #FFF;
-	background-color: #4d9dbd;
-	border-top: 2px solid #81c3de;
-	border-right: 2px solid #81c3de;
-	border-bottom: 2px solid #2b505e;
-	border-left: 2px solid #2b505e;
-	border-radius: 15px;
+	border-radius: 86px;
+        background: linear-gradient(145deg, #ffffff, #e6e6e6);
+        box-shadow:  5px 5px 19px #919191, -5px -5px 19px #ffffff;
 }
 
 #clearButton {
-	color: #FFF;
-	text-shadow: -1px -1px 0px #44006F;
-	background-color: #D20000;
-	border-top: 2px solid #FF8484;
-	border-right: 2px solid #FF8484;
-	border-bottom: 2px solid #800000;
-	border-left: 2px solid #800000;
+	border-radius: 86px;
+        background: linear-gradient(145deg, #cacaca, #f0f0f0);
+        box-shadow:  5px 5px 19px #808080, -5px -5px 19px #ffffff;
 }
 <style/>
 
